--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "prettier": "^3.4.2",
+    "stripe": "^17.5.0",
     "winston": "^3.17.0"
   }
 }
