--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
