--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.19.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
