--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch -r dotenv/config src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node -r dotenv/config ./dist/index.js",
     "type-check": "tsc --noEmit"
   },
   "keywords": [],
